--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     ],
     "mac": {
       "category": "public.app-category.finance",
-      "icon": "build/install.icns",
+      "icon": "build/icon.icns",
       "target": [
         "dmg",
         "zip"
@@ -66,7 +66,7 @@
       ]
     },
     "dmg": {
-      "title": "${name}",
+      "title": "${productName}-${version}",
       "background": "build/bg.tiff",
       "icon": "build/install.icns",
       "window": {
