chore(lint): removing `git add` from lint-staged config
From `v10.0.0` onwards any new modifications to originally staged files will be automatically added
to the commit. If your task previously contained a `git add` step, please remove this. The automatic
behaviour ensures there are less race-conditions, since trying to run multiple git operations at the
same time usually results in an error.

--- a/package.json
+++ b/package.json
@@ -84,16 +84,13 @@
   "lint-staged": {
     "*.js": [
       "prettier --write",
-      "eslint",
-      "git add"
+      "eslint"
     ],
     "*.css": [
-      "stylelint --fix",
-      "git add"
+      "stylelint --fix"
     ],
     "*.html": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "config": {
